feat: 写真情報1件取得
