# api/openapi/openapi.yaml
@@ -320,21 +320,102 @@ components:
         status:
           type: string
           default: ok
-    Photos.Exif:
+    Photos.ExifData:
       type: object
       required:
-        - id
-        - tagId
-        - tagType
-        - valueString
+        - make
+        - model
+        - serialNumber
+        - dateTimeOriginal
+        - createDate
+        - subsecTimeOriginal
+        - timezoneOffset
+        - exposureTime
+        - fNumber
+        - iso
+        - focalLength
+        - focalLengthIn35mm
+        - exposureProgram
+        - exposureCompensation
+        - meteringMode
+        - flash
+        - lensMake
+        - lensModel
+        - lensSerialNumber
+        - width
+        - height
+        - colorSpace
+        - whiteBalance
+        - orientation
+        - software
+        - firmware
       properties:
-        id:
+        make:
           type: string
-        tagId:
+        model:
           type: string
-        tagType:
+        serialNumber:
           type: string
-        valueString:
+        dateTimeOriginal:
+          type: integer
+          format: int64
+        createDate:
+          type: integer
+          format: int64
+        subsecTimeOriginal:
+          type: string
+        timezoneOffset:
+          type: string
+        exposureTime:
+          type: number
+          format: double
+        fNumber:
+          type: number
+          format: double
+        iso:
+          type: integer
+          format: int64
+        focalLength:
+          type: number
+          format: double
+        focalLengthIn35mm:
+          type: number
+          format: double
+        exposureProgram:
+          type: integer
+          format: int64
+        exposureCompensation:
+          type: number
+          format: double
+        meteringMode:
+          type: integer
+          format: int64
+        flash:
+          type: integer
+          format: int64
+        lensMake:
+          type: string
+        lensModel:
+          type: string
+        lensSerialNumber:
+          type: string
+        width:
+          type: integer
+          format: int64
+        height:
+          type: integer
+          format: int64
+        colorSpace:
+          type: integer
+          format: int64
+        whiteBalance:
+          type: integer
+          format: int64
+        orientation:
+          $ref: '#/components/schemas/Photos.PhotoOrientation'
+        software:
+          type: string
+        firmware:
           type: string
     Photos.File:
       type: object
@@ -384,9 +465,7 @@ components:
           type: string
           format: uri
         exifData:
-          type: array
-          items:
-            $ref: '#/components/schemas/Photos.Exif'
+          $ref: '#/components/schemas/Photos.ExifData'
         fileTypes:
           type: array
           items:
@@ -437,6 +516,27 @@ components:
         offset:
           type: integer
           format: int64
+    Photos.PhotoOrientation:
+      type: number
+      enum:
+        - 1
+        - 2
+        - 3
+        - 4
+        - 5
+        - 6
+        - 7
+        - 8
+      x-go-type: int64
+      x-enum-varnames:
+        - ExifOrientationNone
+        - ExifOrientationHorizontal
+        - ExifOrientationRotate180
+        - ExifOrientationVertical
+        - ExifOrientationHorizontalRotate270
+        - ExifOrientationRotate90
+        - ExifOrientationHorizontalRotate90
+        - ExifOrientationRotate270
   securitySchemes:
     ApiKeyAuth:
       type: apiKey
